Reorganized Folders, added pointer and transition on hover

--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Roman Cinis</title>
 </head>
-<body>
+
+<body id="app-container">
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
+
 </html>
