--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Personal website of Roman Cinis.">
+  <meta name="keywords"
+    content="Roman Cinis, Roman Tsinis, Cinis Roman, Tsinis Roman, Tsinis, Cinis, Роман Цинис, Цинис Роман, Цинис">
+
   <style>
     flt-glass-pane {
       image-rendering: pixelated;
